Added additional validation
