# src/main/java/com/example/ecommercedemo/controllers/AddressController.java
@@ -6,10 +6,12 @@ import com.example.ecommercedemo.hateoas.AddressRepresentationModelAssembler;
 import com.example.ecommercedemo.model.AddressReq;
 import com.example.ecommercedemo.model.Address;
 import com.example.ecommercedemo.service.AddressService;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -36,7 +38,7 @@ public class AddressController implements AddressApi {
   }
 
   @Override
-  public ResponseEntity<Address> createAddress(AddressReq addressReq) {
+  public ResponseEntity<Address> createAddress(@Valid @RequestBody AddressReq addressReq) {
     return service.createAddress(addressReq)
         .map(assembler::toModel) // add HATEOAS links
         .map(address -> status(HttpStatus.CREATED).body(address))
